# csce452

./: .gitignore  CMakeLists.txt  README.md
Canvas/: README.txt  canvas.cpp
decompose/: CMakeLists.txt  canvas.cpp  canvas.h  canvaswidget.cpp  canvaswidget.h  car.h  consts.h  main.cpp  manager.cpp  manager.h  robot.cpp  window.cpp  window.h
decompose/icons/orig/: readme.txt
paintbot/: canvaswidget.h  joint.h  myQSpinBox.cpp  myQSpinBox.h  resources.qrc  robotarm.cpp  style.qss
robotDesignusingOpenGL/: canvas.cpp
src/: CMakeLists.txt  armconfig.h  base.cpp  base.h  brush.cpp  brush.h  canvas.cpp  canvas.h  canvaswidget.cpp  canvaswidget.h  joint.cpp  joint.h  link.cpp  link.h  main.cpp  resources.qrc  robotarm.cpp  robotarm.h  style.qss  utils.h  window.cpp  window.h
vehicles/: CMakeLists.txt  canvas.cpp  canvas.h  canvaswidget.cpp  canvaswidget.h  car.cpp  car.h  consts.h  joint.cpp  link.cpp  link.h  main.cpp  manager.cpp  manager.h  style.qss  window.cpp  window.h
